algo/.gitlab-ci.yml: shouldlocus and shouldvdj in two separate stages
(shouldlocus without coverage, we have coverage for shouldvdj)

see #2259

--- a/algo/.gitlab-ci.yml
+++ b/algo/.gitlab-ci.yml
@@ -36,6 +36,13 @@ algo_should:
     reports:
       junit: algo/tests/should.xml
 
+algo_shouldlocus:
+  <<: *vidjil-algo
+  stage: test_shouldvdj
+  script: make -C algo shouldlocus
+  artifacts:
+    <<: *lcov_artifact
+
 algo_shouldvdj:
   <<: *vidjil-algo
   stage: test_shouldvdj
