--- a/algo/.gitlab-ci-compilers.yml
+++ b/algo/.gitlab-ci-compilers.yml
@@ -51,7 +51,7 @@ gcc:
     - .testing-gcc
   parallel:
     matrix:
-      - GCC_VERSION: ["7.3", "8", "9", "10", "11"]
+      - GCC_VERSION: ["5.5", "6.5", "7.5", "8", "9", "10", "11"]
 
 clang:
   extends:
