--- a/browser/.gitlab-ci.yml
+++ b/browser/.gitlab-ci.yml
@@ -14,7 +14,41 @@
     - bash docker/ci/script_preprocess.bash
     - cd /app
     - export BROWSER=browsers/$BROWSER
-    - bash script.bash
+    - bash script.bash "/app/cypress/integration/test_*.js"
+  variables:
+    BROWSER: ../electron
+    CYPRESS_PATH: browser/test/cypress
+    HOST: html
+  artifacts:
+    reports:
+      junit: $CYPRESS_PATH/reports/test-cypress-*.xml
+    paths:
+      - $CYPRESS_PATH
+    expire_in: 7 day
+    when: always
+  tags:
+    - cidocker
+  only:
+    - /^feature-.*c.*\/.*$/
+    - /^hotfix-.*c.*\/.*$/
+
+
+.test_cypress_ext:
+  image: vidjilci/cypress_with_browsers:latest
+  stage: test_cypress_external
+  # extends:
+    # - .need_for_staged_client
+  script:
+    - echo -e "Run cypress with browser $BROWSER"
+    - echo -e "PWD $PWD; CYPRESS_PATH $CYPRESS_PATH"
+    # Create doc support files for testing
+    - python tools/org-babel-tangle.py --all doc/vidjil-format.md
+    - mv analysis-example1.vidjil  analysis-example2.analysis  analysis-example2.vidjil doc/
+    # Cypress
+    - bash docker/ci/script_preprocess.bash
+    - cd /app
+    - export BROWSER=browsers/$BROWSER
+    - bash script.bash "/app/cypress/integration/external_*.js"
   variables:
     BROWSER: ../electron
     CYPRESS_PATH: browser/test/cypress
@@ -45,6 +79,26 @@ client1-ff-supported:
 c2:
   extends:
     - .test_cypress_base
+  parallel:
+    matrix:
+      - BROWSER: [
+          firefox_latest/firefox,
+          firefox_legacy/firefox,
+          chrome_supported/chrome,
+          chrome_latest/chrome,
+          chrome_legacy/chrome
+        ]
+
+external1-ff-supported:
+  extends:
+    - .test_cypress_ext
+    - .need_for_moderate_client
+  variables:
+    BROWSER: firefox_supported/firefox
+
+external2:
+  extends:
+    - .test_cypress_ext
   parallel:
     matrix:
       - BROWSER: [
