Cypress; launch cypress pipeline for client and server on dev and prod branches

--- a/server/.gitlab-ci.yml
+++ b/server/.gitlab-ci.yml
@@ -30,6 +30,8 @@
   only:
     - /^feature-.*s.*\/.*$/
     - /^hotfix-.*s.*\/.*$/
+    - /^prod-server/
+    - dev
   tags:
     - x86_64
     - docker
