mkdocs.yml: search
may close #4970

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ site_url: https://www.vidjil.org/doc
 docs_dir: doc
 
 plugins:
+    - search
     - gitlab_links:
          gitlab_url: 'https://gitlab.inria.fr/vidjil/vidjil'
 
