--- a/browser/.gitlab-ci.yml
+++ b/browser/.gitlab-ci.yml
@@ -85,3 +85,38 @@ external2:
           chrome_latest/chrome,
           chrome_legacy/chrome
         ]
+
+
+
+
+## cypress client
+# For the moment, need to be into separate stage (https://gitlab.com/gitlab-org/gitlab/-/issues/30632)
+tuto-c1-ff-supported:
+  stage: test_tutorial
+  extends:
+    - .test_cypress_base
+  variables:
+    BROWSER: firefox_supported/firefox
+    PATH_CYPRESS: browser/test/cypress/integration/
+    TEST_FILES: "/app/cypress/integration/doc_*.js"
+  only:
+    - /^feature-.*c.*\/.*$/
+    - /^hotfix-.*c.*\/.*$/
+    - /^prod-client/
+    - dev
+    - doc
+  tags:
+    - cidocker
+
+# tuto-c2:
+#   extends:
+#     - tuto-c1-ff-supported
+#   parallel:
+#     matrix:
+#       - BROWSER: [
+#           firefox_latest/firefox,
+#           firefox_legacy/firefox,
+#           chrome_supported/chrome,
+#           chrome_latest/chrome,
+#           chrome_legacy/chrome
+#         ]
