--- a/server/.gitlab-ci.yml
+++ b/server/.gitlab-ci.yml
@@ -59,3 +59,36 @@ s2:
           chrome_latest/chrome,
           chrome_legacy/chrome
         ]
+
+
+
+## Cypress TUTORIAL with server
+tuto-s1-ff-supported:
+  stage: test_tutorial
+  extends:
+    - test_cypress_server
+  variables:
+    BROWSER: firefox_supported/firefox
+    PATH_CYPRESS: server/web2py/applications/vidjil/tests/cypress/integration
+    TEST_FILES: "/app/cypress/integration/doc_*.js"
+  only:
+    - /^feature-.*s.*\/.*$/
+    - /^hotfix-.*s.*\/.*$/
+    - /^prod-server/
+    - dev
+    - doc
+  needs: []
+
+## Cypress with server
+tuto-s2:
+  extends:
+    - tuto-s1-ff-supported
+  parallel:
+    matrix:
+      - BROWSER: [
+          firefox_latest/firefox,
+          firefox_legacy/firefox,
+          chrome_supported/chrome,
+          chrome_latest/chrome,
+          chrome_legacy/chrome
+        ]
