--- a/server/.gitlab-ci.yml
+++ b/server/.gitlab-ci.yml
@@ -71,6 +71,9 @@ tuto-s1-ff-supported:
     BROWSER: firefox_supported/firefox
     PATH_CYPRESS: server/web2py/applications/vidjil/tests/cypress/integration
     TEST_FILES: "/app/cypress/integration/doc_*.js"
+  before_script:
+    - apt-get -y install pandoc
+    - make -C doc/tutorial/ build_tutorial_cypress_server
   only:
     - /^feature-.*s.*\/.*$/
     - /^hotfix-.*s.*\/.*$/
