--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,10 +47,13 @@ stages:
 # Tools
 
 test_tools:
+  image: python:2.7
   stage: test_tools
   script: make -C tools/tests
   extends:
     - .need_for_quick_test
+  tags:
+    - cidocker
 
 
 # Germlines
