--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ stages:
 # Tools
 
 test_tools:
-  image: python:2.7
+  image: vidjilci/cypress_with_browsers:latest
   stage: test_tools
   script: make -C tools/tests
   extends:
