--- a/docker/vidjil-server2/Dockerfile
+++ b/docker/vidjil-server2/Dockerfile
@@ -5,7 +5,7 @@ label description="An Ubuntu based docker image which comes \
 with a full installation of the Vidjil algoright and browser/server."
 
 #ARG user=py4web
-run apt-get update ; apt-get install --no-install-recommends --no-install-suggests -y ca-certificates wget cron unzip make git python3 python3-pip python3-dev python3-setuptools uwsgi memcached && \
+run apt-get update ; apt-get install --no-install-recommends --no-install-suggests -y ca-certificates wget cron unzip make git python3 python3-pip python3-dev python3-setuptools uwsgi-src uuid-dev libcap-dev libpcre3-dev gcc memcached && \
     service memcached restart && \
     #groupadd -r $user && \
     #useradd -m -r -g $user $user && \
@@ -14,6 +14,7 @@ run apt-get update ; apt-get install --no-install-recommends --no-install-sugges
 	pip3 install wheel && \
 	pip3 install ombott && \
 	pip3 install rocket3 && \
+	pip3 install uwsgi && \
 	pip3 install --upgrade pip && \
     python3 -m pip install -U py4web
 
@@ -22,6 +23,12 @@ arg remote_repo=https://gitlab.inria.fr/vidjil/vidjil.git
 run cd /usr/share/ && git config --global http.sslVerify false && git clone -b $git_branch $remote_repo
 run cd /usr/share/vidjil/server/py4web && cat Makefile
 run cd /usr/share/vidjil/server/py4web && make install 
+
+run mkdir /usr/lib/uwsgi
+run mkdir /usr/lib/uwsgi/plugins
+run PYTHON=python3.8 uwsgi --build-plugin "/usr/src/uwsgi/plugins/python python38"
+run mv python38_plugin.so /usr/lib/uwsgi/plugins/python38_plugin.so
+run chmod 644 /usr/lib/uwsgi/plugins/python38_plugin.so
 
 
 run mkdir /etc/vidjil
