--- a/docker/vidjil-client/conf/server_location.conf
+++ b/docker/vidjil-client/conf/server_location.conf
@@ -1,4 +1,4 @@
-location ~ ^/(vidjil|admin) {
+location ~ ^/(vidjil|admin|_dashboard) {
     include /etc/nginx/conf.d/web2py/uwsgi.conf;
     proxy_read_timeout 600;
     client_max_body_size 20G;
