py4web : overwrite auth define_table function
using original define_table function required to mess with fake_migrate in order to load databases

--- a/docker/docker-compose-py4web.yml
+++ b/docker/docker-compose-py4web.yml
@@ -44,6 +44,15 @@ services:
       links:
           - redis:redis
 
+  celery:
+      image: vidjil/server2:latest
+      command: bash /entrypoints/celery-entrypoint.sh
+      depends_on:
+          - uwsgi
+          - redis
+      links:
+          - redis:redis
+
   flower:
       image: vidjil/server2:latest
       command: bash /entrypoints/flower-entrypoint.sh
