--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -184,8 +184,14 @@ deploy_release_prod:
 # Client
 
 test_browser_unit:
+  image: node
   stage: test_unit
-  script: make unit_browser
+  script: 
+    - npm -v
+    - npm install --save-dev qunit
+    - npm link nightmare --unsafe-perm=true ;
+    - apt-get update && apt-get -y install xvfb grep
+    - make unit_browser
   artifacts:
     paths:
     - browser/
