gitlab-ci; use vidjilci image for test_browser_unit Link to #5069

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -184,7 +184,7 @@ deploy_release_prod:
 # Client
 
 test_browser_unit:
-  image: node:latest
+  image: vidjilci/cypress_with_browsers:latest
   stage: test_unit
   script: 
     - npm -v
