--- a/server/.gitlab-ci.yml
+++ b/server/.gitlab-ci.yml
@@ -83,6 +83,7 @@ s2:
   extends:
     - .test_cypress_server
   script:
+    - apk add pandoc
     - make -C doc/tutorial/ build_tutorial_cypress_server
     - *test_cypress_server_script
   variables:
