--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,5 @@ server/py4web/apps/examples/
 server/py4web/apps/vidjil/databases/
 
 server/py4web/password.txt
+
+docker/vidjil-server2/vidjil/
